# ai-poc

anomaly-detection-system/src/: detector.rs  features.rs  main.rs
autonomous-web-agent/: Cargo.toml
autonomous-web-agent/src/: browser.rs  error.rs  extractor.rs  guardrails.rs  lib.rs  main.rs  planner.rs  report.rs  task.rs
chatbot-nlp/: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TEST_CASES.md  quickstart.sh
chatbot-nlp/examples/: usage.rs
chatbot-nlp/src/: chatbot.rs  entity.rs  intent.rs  lib.rs
first-mcp/: README.md  package-lock.json  package.json
first-mcp/src/: index.ts
image-classification-cnn/: README.md  requirements.txt
image-classification-cnn/src/: data_loader.py  model.py
movie-recommendation-system/src/: content_based.rs  hybrid.rs  models.rs
price-prediction-system/: Cargo.toml  QUICKSTART.md
price-prediction-system/src/: data.rs  error.rs  evaluation.rs  feature_engineering.rs  lib.rs  main.rs  models.rs  regression.rs
sentiment-analysis-api/: Dockerfile  requirements.txt
sentiment-analysis-api/app/: schemas.py
