[package]
name = "chatbot_nlp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chatbot"
path = "src/main.rs"

[lib]
name = "chatbot_nlp"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
